--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/core": "^7.18.13",
     "@sanity/client": "^3.3.5",
     "@sanity/image-url": "^1.0.1",
     "@stripe/stripe-js": "^1.35.0",
     "canvas-confetti": "^1.5.1",
-    "next": "12.2.5",
+    "next": "^12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.3.0",
